Feature/dpo 2731 lam datex2 korjauksia (#167)
* DPO-2731 LAM-datan muunnos tuoreeseen Datex-profiiliin
- General fixes to datex format
- Fixes for MeasurementSiteTablePublication and MeasuredDataPublication
- Fixes for xml transfromation and get rid of some ZonedDateTime problems
- Removed unused code