@@ -17,7 +17,7 @@ import static org.slf4j.LoggerFactory.getLogger;
 
 import java.io.IOException;
 import java.time.Instant;
-import java.time.ZonedDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicReference;
@@ -28,6 +28,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.annotation.Rollback;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -77,8 +78,8 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
             for (final ImsJsonVersion imsJsonVersion : ImsJsonVersion.values()) {
                 for (final SituationType situationType : values()) {
                     trafficMessageTestHelper.cleanDb();
-                    final ZonedDateTime start = TimeUtil.getZonedDateTimeNowWithoutMillisAtUtc().minusHours(1);
-                    final ZonedDateTime end = start.plusHours(2);
+                    final Instant start = TimeUtil.nowWithoutMillis().minus(1, ChronoUnit.HOURS);
+                    final Instant end = start.plus(2, ChronoUnit.HOURS);
                     trafficMessageTestHelper.initDataFromStaticImsResourceContent(imsXmlVersion, situationType.name(), imsJsonVersion, start, end);
                     log.info("activeIncidentsDatex2AndJsonEquals with imsXmlVersion={}, imsJsonVersion={} and situationType={}",
                              imsXmlVersion, imsJsonVersion, situationType);
@@ -109,15 +110,18 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
         trafficMessageTestHelper.cleanDb();
         for (final ImsXmlVersion imsXmlVersion : ImsXmlVersion.values()) {
             for (final SituationType situationType : values()) {
-                final ZonedDateTime start = TimeUtil.getZonedDateTimeNowWithoutMillisAtUtc().minusHours(1);
-                final ZonedDateTime end = start.plusHours(2);
+                final Instant start = TimeUtil.nowWithoutMillis().minus(1, ChronoUnit.HOURS);
+                final Instant end = start.plus(2, ChronoUnit.HOURS);
                 for (final ImsJsonVersion imsJsonVersion : ImsJsonVersion.values()) {
-                    trafficMessageTestHelper.initDataFromStaticImsResourceContent(imsXmlVersion, situationType.name(), imsJsonVersion, start, end);
+                    trafficMessageTestHelper.initDataFromStaticImsResourceContent(
+                            imsXmlVersion, situationType.name(), imsJsonVersion, start, end);
                     log.info("activeIncidentsDatex2AndJsonEquals with imsXmlVersion={}, imsJsonVersion={} and situationType={}",
                              imsXmlVersion, imsJsonVersion, situationType);
                 }
-                activeIncidentsDatex2AndJsonEquals(situationType, ImsJsonVersion.getLatestVersion(),
-                                                   getSituationIdForSituationType(situationType.name()), start, end);
+                activeIncidentsDatex2AndJsonEquals(
+                        situationType,
+                        ImsJsonVersion.getLatestVersion(),
+                        getSituationIdForSituationType(situationType.name()), start, end);
             }
         }
     }
@@ -134,26 +138,27 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
         // One not active to get last modified field from db
         trafficMessageTestHelper.initDataFromStaticImsResourceContent(
             ImsXmlVersion.getLatestVersion(), TRAFFIC_ANNOUNCEMENT.name(), ImsJsonVersion.getLatestVersion(),
-            ZonedDateTime.now().minusHours(2), ZonedDateTime.now().minusHours(1));
+            Instant.now().minus(2, ChronoUnit.HOURS), Instant.now().minus(1, ChronoUnit.HOURS));
         // One active with json
         trafficMessageTestHelper.initDataFromFile("TrafficIncidentImsMessageWithNullProperties.xml");
         // Not found, as both must exist
         assertActiveMessageFound(GUID_WITH_JSON, false, false);
     }
 
+    @Rollback(value = false)
     @Test
     public void findActiveTrafficAnnouncementCanceledIsNotReturned() throws IOException {
         trafficMessageTestHelper.initDataFromStaticImsResourceContent(
             ImsXmlVersion.V1_2_1, TRAFFIC_ANNOUNCEMENT.name(), ImsJsonVersion.getLatestVersion(),
-            ZonedDateTime.now().minusDays(1), ZonedDateTime.now().plusDays(1), true);
+            Instant.now().minus(1, ChronoUnit.DAYS), Instant.now().plus(1, ChronoUnit.DAYS), true);
         // Not found, as both must exist
         assertActiveMessageFound(GUID_WITH_JSON, false, false);
     }
 
     @Test
     public void findTrafficAnnouncementWithActiveAndDeactiveSituationRecordIsReturned() throws IOException {
-        final ZonedDateTime start = TimeUtil.getZonedDateTimeNowAtUtc().minusHours(1);
-        final ZonedDateTime endTime = start.plusHours(2);
+        final Instant start = TimeUtil.nowWithoutMillis().minus(1, ChronoUnit.HOURS);
+        final Instant endTime = start.plus(2, ChronoUnit.HOURS);
         // One active with json
         trafficMessageTestHelper.initImsDataFromFile("TrafficIncidentImsMessageV1_2_1WithActiveAndPassiveSituationRecord.xml",
                                                      ImsJsonVersion.getLatestVersion(), start, endTime, false);
@@ -165,7 +170,7 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
         // Message guid GUID50390596 that has MultiLineString with valid LineString and invalid LineString with two equal points
         trafficMessageTestHelper.initDataFromFile("TrafficIncidentImsMessageWithInvalidMultiLineStringGeometry.xml");
         final TrafficAnnouncementFeature
-            feature = trafficMessageDataServiceV1.findBySituationIdJson("GUID50390596", false, true).getFeatures().get(0);
+            feature = trafficMessageDataServiceV1.findBySituationIdJson("GUID50390596", false, true).getFeatures().getFirst();
         // Result geometry should only have one linestring and the invalid LineString should have be removed
         assertEquals("LineString", feature.getGeometry().getType().toString());
         assertTrue(feature.getGeometry().getCoordinates().size() > 2);
@@ -176,7 +181,7 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
         // MultiLineString with single lineString and equal points
         trafficMessageTestHelper.initDataFromFile("TrafficIncidentImsMessageWithInvalidMultiLineStringGeometry2.xml");
         final TrafficAnnouncementFeature
-            feature = trafficMessageDataServiceV1.findBySituationIdJson("GUID50390964", false, true).getFeatures().get(0);
+            feature = trafficMessageDataServiceV1.findBySituationIdJson("GUID50390964", false, true).getFeatures().getFirst();
         // Result geometry should only have one linestring and the invalid LineString should have be removed
         assertEquals("Point", feature.getGeometry().getType().toString());
         assertTrue(feature.getGeometry().getCoordinates().size() > 1);
@@ -185,7 +190,7 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
     @Test
     public void invalidJsonMultiPolygonGeometryIsFixed() throws IOException {
         trafficMessageTestHelper.initDataFromFile("TrafficIncidentImsMessageWithInvalidMultiPolygonGeometry.xml");
-        final TrafficAnnouncementFeature feature = trafficMessageDataServiceV1.findBySituationIdJson("GUID50379978", false, true).getFeatures().get(0);
+        final TrafficAnnouncementFeature feature = trafficMessageDataServiceV1.findBySituationIdJson("GUID50379978", false, true).getFeatures().getFirst();
         // Result geometry should only have one linestring and the invalid LineString should have be removed
         assertEquals("Polygon", feature.getGeometry().getType().toString());
         assertEquals(2, feature.getGeometry().getCoordinates().size());
@@ -196,13 +201,13 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
         trafficMessageTestHelper.cleanDb();
         final ImsXmlVersion imsXmlVersion = ImsXmlVersion.getLatestVersion();
         final int count = getRandom(5, 15);
-        final ZonedDateTime initialTime = TimeUtil.getZonedDateTimeNowWithoutMillisAtUtc().minusHours(count);
+        final Instant initialTime = TimeUtil.nowWithoutMillis().minus(count, ChronoUnit.HOURS);
 
         // 1. create multiple versions for one situation
-        final AtomicReference<ZonedDateTime> latestStart = new AtomicReference<>();
+        final AtomicReference<Instant> latestStart = new AtomicReference<>();
         IntStream.range(0, count).forEach(i -> {
-            latestStart.set(initialTime.plusHours(i));
-            final ZonedDateTime end = latestStart.get().plusHours(1);
+            latestStart.set(initialTime.plus(i, ChronoUnit.HOURS));
+            final Instant end = latestStart.get().plus(1, ChronoUnit.HOURS);
             try {
                 trafficMessageTestHelper.initDataFromStaticImsResourceContent(imsXmlVersion, TRAFFIC_ANNOUNCEMENT.name(), ImsJsonVersion.getLatestVersion(),
                                                                               latestStart.get(), end);
@@ -222,12 +227,12 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
         final D2LogicalModel latestDatex = trafficMessageDataServiceV1.findBySituationId(situationId, true).getLeft();
 
         // Make sure only the latest version is returned
-        assertEquals(latestStart.get(), latestJson.getFeatures().get(0).getProperties().announcements.get(0).timeAndDuration.startTime);
-        assertEquals(getVersionTime(latestStart.get(), ImsJsonVersion.getLatestVersion()).toEpochSecond(),
-                     getSituationPublication(latestDatex).getSituations().get(0).getSituationRecords().get(0)
+        assertEquals(latestStart.get(), latestJson.getFeatures().getFirst().getProperties().announcements.getFirst().timeAndDuration.startTime);
+        assertEquals(getVersionTime(latestStart.get(), ImsJsonVersion.getLatestVersion()).getEpochSecond(),
+                     getSituationPublication(latestDatex).getSituations().getFirst().getSituationRecords().getFirst()
                          .getSituationRecordVersionTime().getEpochSecond());
-        assertEquals(latestStart.get().toEpochSecond(),
-                     getSituationPublication(latestDatex).getSituations().get(0).getSituationRecords().get(0)
+        assertEquals(latestStart.get().getEpochSecond(),
+                     getSituationPublication(latestDatex).getSituations().getFirst().getSituationRecords().getFirst()
                          .getValidity().getValidityTimeSpecification().getOverallStartTime().getEpochSecond());
         assertEquals(1, latestJson.getFeatures().size());
         assertEquals(1, getSituationPublication(latestDatex).getSituations().size());
@@ -242,44 +247,44 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
 
         AssertHelper.assertCollectionSize(1, situations);
         AssertHelper.assertCollectionSize(1, jsons.getFeatures());
-        final Situation situation = situations.get(0);
-        final TrafficAnnouncementFeature situationJson = jsons.getFeatures().get(0);
+        final Situation situation = situations.getFirst();
+        final TrafficAnnouncementFeature situationJson = jsons.getFeatures().getFirst();
 
         assertEquals(situationId, situation.getId());
         assertEquals(situationId, situationJson.getProperties().situationId);
     }
 
     private void activeIncidentsDatex2AndJsonEquals(final SituationType situationType, final ImsJsonVersion imsJsonVersion, final String situationId,
-                                                    final ZonedDateTime start, final ZonedDateTime end) {
+                                                    final Instant start, final Instant end) {
         final D2LogicalModel d2 = trafficMessageDataServiceV1.findActive(0, situationType).getLeft();
         final List<Situation> activeSituations = ((SituationPublication) d2.getPayloadPublication()).getSituations();
         final TrafficAnnouncementFeatureCollection activeJsons = trafficMessageDataServiceV1.findActiveJson(0, true, situationType);
 
         AssertHelper.assertCollectionSize(1, activeSituations);
         AssertHelper.assertCollectionSize(1, activeJsons.getFeatures());
-        final Situation situation = activeSituations.get(0);
-        final TrafficAnnouncementFeature situationJson = activeJsons.getFeatures().get(0);
+        final Situation situation = activeSituations.getFirst();
+        final TrafficAnnouncementFeature situationJson = activeJsons.getFeatures().getFirst();
 
         final TrafficAnnouncementProperties jsonProperties = situationJson.getProperties();
         assertEquals(situationId, situation.getId());
         assertEquals(situationId, jsonProperties.situationId);
 
-        final Instant situationVersionTime = situation.getSituationRecords().get(0).getSituationRecordVersionTime();
-        final Instant situationStart = situation.getSituationRecords().get(0).getValidity().getValidityTimeSpecification().getOverallStartTime();
-        final Instant situationEnd = situation.getSituationRecords().get(0).getValidity().getValidityTimeSpecification().getOverallEndTime();
-        final TimeAndDuration jsonTimeAndDuration = jsonProperties.announcements.get(0).timeAndDuration;
+        final Instant situationVersionTime = situation.getSituationRecords().getFirst().getSituationRecordVersionTime();
+        final Instant situationStart = situation.getSituationRecords().getFirst().getValidity().getValidityTimeSpecification().getOverallStartTime();
+        final Instant situationEnd = situation.getSituationRecords().getFirst().getValidity().getValidityTimeSpecification().getOverallEndTime();
+        final TimeAndDuration jsonTimeAndDuration = jsonProperties.announcements.getFirst().timeAndDuration;
 
-        assertEquals(getVersionTime(start, imsJsonVersion.intVersion).toInstant(), situationVersionTime);
-        assertEquals(getVersionTime(start, imsJsonVersion.intVersion).toInstant(), jsonProperties.releaseTime.toInstant());
+        assertEquals(getVersionTime(start, imsJsonVersion.intVersion), situationVersionTime);
+        assertEquals(getVersionTime(start, imsJsonVersion.intVersion), jsonProperties.releaseTime.toInstant());
 
-        assertEquals(start.toInstant(), situationStart);
-        assertEquals(start.toInstant(), jsonTimeAndDuration.startTime.toInstant());
+        assertEquals(start, situationStart);
+        assertEquals(start, jsonTimeAndDuration.startTime);
 
-        assertEquals(end.toInstant(), situationEnd);
-        assertEquals(end.toInstant(), jsonTimeAndDuration.endTime.toInstant());
+        assertEquals(end, situationEnd);
+        assertEquals(end, jsonTimeAndDuration.endTime);
 
         final String commentXml =
-            situation.getSituationRecords().get(0).getGeneralPublicComments().get(0).getComment().getValues().getValues().stream()
+            situation.getSituationRecords().getFirst().getGeneralPublicComments().getFirst().getComment().getValues().getValues().stream()
                 .filter(c -> c.getLang().equals("fi")).findFirst().orElseThrow().getValue();
 
         assertEquals(situationType, jsonProperties.getSituationType());
@@ -287,7 +292,7 @@ public class TrafficMessageDataServiceV1Test extends AbstractWebServiceTestWithR
             assertTrue(Sets.newHashSet(TrafficAnnouncementType.values()).contains(jsonProperties.getTrafficAnnouncementType()));
         }
 
-        final TrafficAnnouncement announcement = jsonProperties.announcements.get(0);
+        final TrafficAnnouncement announcement = jsonProperties.announcements.getFirst();
         assertTrue(commentXml.contains(announcement.title.trim()));
     }
 
